Se crea página de Lyft

--- a/index.html
+++ b/index.html
@@ -1,1 +1,152 @@
 <!-- Agrega aquí la estructura HTML de tu sitio web -->
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Lyft</title>
+	<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:300,400,500,600,700,800,900" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+<body>
+	<header>
+		<!-- MENU PRINCIPAL ---------------------->
+		<ul class="menuPrincipal">
+			<li class="logo">
+				<span>
+					<span>
+						<img src="assets/images/logo-white.png" class="logoWhite"><!--display block-->
+						<img src="assets/images/logo-pink.png" class="logoPink"><!--display none-->
+					</span>
+				</span>
+			</li>
+			<li class="drive">Drive</li>
+			<li class="explore">Explore<i class="fa fa-chevron-down" aria-hidden="true"></i></li>
+			<li class="help">Help</li>
+			<li class="logIn">Log in</li>
+			<li class="signUp">Sign up</li>
+		</ul>
+		<div class="form">
+			<h1>TURN MILES</h1>
+			<h2>INTO MONEY</h2>
+			<p>SIGN UP TO DRIVE WITH LYFT.</p>
+			<form>
+				<ul>
+						<li>
+							<div class="textCamp">
+								<label>Phone Number</label>
+								<input type="tel" name="" placeholder="Phone Number">
+							</div>
+						</li>
+						<li>
+							<div class="btn">
+								<div class="btnPink"><input type="button" value="Become a Driver" class="btn-1"></div>
+								<a href="#" class="btn-2">Sign Up to Ride</a>
+							</div>
+						</li>
+				</ul>		
+			</form>
+			<p>Already applied? <a href="#">Check the status of your application here.</a></p>
+			<p>Earn money for inviting friends to drive. <a href="#">Learn more</a></p>
+		</div>
+	</header>
+	<!-- /************CELULAR*************************/ -->
+	<section class="secondSection">
+		<div class="containerCel">
+			<div>
+				<h3>A RIDE IN MINUTES</h3>
+				<p>Request a ride and you’ll be on your way in minutes. Request. Ride. Repeat.</p>
+			</div>
+			<div>
+				<h3>SERIOUS ABOUT SAFETY</h3>
+				<p>From knowing the color of your driver’s car to our 24/7 Trust & Safety Team, we got you.</p>
+			</div>
+			<div>
+				<h3>HAPPY DRIVERS.</h3>
+				<h3>HAPPY RIDERS.</h3>
+				<p>Ride with us and you’ll see why 9 out of 10 rides end with five stars.</p>
+			</div>
+		</div>
+		<div class="celular"></div>
+	</section>
+	<!-- /************AMPLIFY YOUR RIDE***************/ -->
+	<section class="amplifyYourRide">
+		<div class="contenedor">
+			<h6>WATCH</h6>
+			<h2>AMPLIFY YOUR RIDE</h2>
+			<p>Lyft´s new emblem, Amp, is the secret to smooth pickups. Ligthting up dashboards nationwide, the device makes it easy for passengers and drivers to find each other.</p>
+		</div>
+		<div class="video-1">
+			<iframe src="https://www.youtube.com/embed/fLSmUWOYpKw" frameborder="0" allowfullscreen></iframe>
+		</div>
+	</section>
+	<!-- /************JUNE****************************/ -->
+	<section class="june">
+		<div class="video-2">
+			<iframe src="https://www.youtube.com/embed/v8nyGzOLsdw" frameborder="0" allowfullscreen></iframe>
+		</div>
+		<div class="contenedor2">
+			<h6>WATCH</h6>
+			<h2>JUNE</h2>
+			<P>
+				In a animated short film by Academy Award-winner John Kahrs, a lonely window in historic South Chicago is empowered to star sharing the ride - and sharing her life, too.
+			</P>
+		</div>
+	</section>
+	<!-- /************A GOOD THING GOING**************/ -->
+	<section class="aGoodThingGoing">
+		<div class="contenedor">
+			<h6>WATCH</h6>
+			<h2>A GOOD THING GOING</h2>
+			<p>
+				Lauching on TV and online, "Ride in the Bright Side" shows Lyft continues to prioritize happy drivers, short ETAs, and safety.
+			</p>
+		</div>
+		<div class="video-1">
+			<iframe src="https://www.youtube.com/embed/xj2VWLV0xCU" frameborder="0" allowfullscreen></iframe>
+		</div>
+	</section>
+	<!-- /************FOOTER**************************/ -->
+	<footer>
+		<ul class="ulLogin">
+			<li class="uno"><a href="">LOG IN</a></li>
+			<li><a href="">Help</a></li>
+			<li><a href="">Cities</a></li>
+			<li><a href="">Airports</a></li>
+			<li><a href="">Fare Estimate</a></li>
+		</ul>
+		<ul class="ulPartner">
+			<li class="uno"><a href="">PARTNER</a></li>
+			<li><a href="">Partnerships</a></li>
+			<li><a href="">Enterprice</a></li>
+			<li><a href="">Ambassadors</a></li>
+			<li><a href="">Developers</a></li>
+		</ul>
+		<ul class="ulLearn">
+			<li class="uno"><a href="">LEARN</a></li>
+			<li><a href="">Safety</a></li>
+			<li><a href="">Blog</a></li>
+			<li><a href="">Press</a></li>
+			<li><a href="">Careers</a></li>
+		</ul>
+		<div class="imgLogos">
+			<img src="assets/images/apple-store.svg">
+			<img src="assets/images/google-play.png">
+			<img src="assets/images/microsoft.png">
+		</div>
+		<div class="redesSociales">
+			<div class="cicle">
+				<i class="fa fa-facebook" aria-hidden="true"></i>
+			</div>
+			<div class="cicle">
+				<i class="fa fa-instagram" aria-hidden="true"></i>
+			</div>
+			<div class="cicle">
+				<i class="fa fa-twitter" aria-hidden="true"></i>
+			</div>
+		</div>
+		<hr>
+		<div class="copyrigth">© 2017 Lyft, Inc.TermsPrivacy</div>
+	</footer>
+</body>
+</html>
