Se actualiza diseño de Lyft

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 	<header>
+		<img src="assets/images/hero.gif" class="imagePrincipal">
 		<!-- MENU PRINCIPAL ---------------------->
+		<div class="navBar">
 		<ul class="menuPrincipal">
 			<li class="logo">
 				<span>
@@ -26,6 +28,7 @@
 			<li class="logIn">Log in</li>
 			<li class="signUp">Sign up</li>
 		</ul>
+		</div>
 		<div class="form">
 			<h1>TURN MILES</h1>
 			<h2>INTO MONEY</h2>
@@ -46,8 +49,8 @@
 						</li>
 				</ul>		
 			</form>
-			<p>Already applied? <a href="#">Check the status of your application here.</a></p>
-			<p>Earn money for inviting friends to drive. <a href="#">Learn more</a></p>
+			<p class="base">Already applied? <a href="#">Check the status of your application here.</a></p>
+			<p class="base">Earn money for inviting friends to drive. <a href="#">Learn more</a></p>
 		</div>
 	</header>
 	<!-- /************CELULAR*************************/ -->
